# wasi-webrtc-datachannels

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  justfile  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  conformance.yml  copilot-setup-steps.yml  shadow-build.yml
components/cli-signaling/: Cargo.toml
components/cli-signaling/src/: lib.rs
components/cli-signaling/wit/: webrtc-echo-demo.wit
components/echo-demo/: Cargo.toml
components/echo-demo/src/: lib.rs
components/echo-demo/wit/: world.wit
components/signaling-demo/: Cargo.toml
components/signaling-demo/src/: lib.rs
conformance/: PLAN.md  README.md  manifests.toml  tests.toml
conformance/adapters/common/: Cargo.toml
conformance/adapters/common/src/: lab.rs  lib.rs  peer_command.rs
conformance/adapters/jco/: driver.js  package-lock.json  package.json  patch-generated.mjs  run-browser.mjs  run-node.mjs  signaling.js  webrtc.js
conformance/adapters/wasip3/: Cargo.toml
conformance/adapters/wasip3/driver/: Cargo.toml
conformance/adapters/wasip3/driver/src/: lib.rs
conformance/adapters/wasip3/mailbox/: Cargo.toml
conformance/adapters/wasip3/mailbox/src/: lib.rs
conformance/adapters/wasip3/src/: lib.rs  main.rs
conformance/adapters/wasmtime/: Cargo.toml
conformance/adapters/wasmtime/src/: lib.rs  main.rs
conformance/guest/: Cargo.toml
conformance/guest/src/: lib.rs
conformance/manifests/: example.toml.example  jco-browser.toml  jco-node-x-wasmtime.toml  jco-node.toml  wasip3-guest-x-wasmtime.toml  wasip3-guest.toml  wasmtime-x-jco-node.toml  wasmtime-x-wasip3-guest.toml  wasmtime.toml
conformance/runner/: Cargo.toml
conformance/runner/src/: main.rs  manifest.rs  plan.rs  registry.rs  results.rs  signaling.rs
conformance/scenarios/: coturn.sh  lib.sh  netns.sh  nftables.sh  scenario.sh
conformance/signaling/: PROTOCOL.md
conformance/signaling/server/: Cargo.toml
conformance/signaling/server/src/: lib.rs  main.rs  state.rs
conformance/signaling/server/tests/: mailbox.rs
conformance/wit/: world.wit
crates/wasi-webrtc-datachannels-runner/: Cargo.toml
crates/wasmtime-wasi-webrtc-datachannels/: Cargo.toml
crates/wasmtime-wasi-webrtc-datachannels/src/: data_channel.rs  host.rs  lib.rs  pipe.rs
crates/wasmtime-wasi-webrtc-datachannels/src/p3/: bindings.rs  data_channel.rs  host.rs  manual.rs  mod.rs
crates/wasmtime-wasi-webrtc-datachannels/tests/: manual_signaling.rs
crates/wasmtime-wasi-webrtc-datachannels/tests/manual-signaling-guest/src/: lib.rs
crates/wasmtime-wasi-webrtc-datachannels/tests/manual-signaling-guest/wit/: world.wit
crates/wasmtime-wasi-webrtc-datachannels/wit/: world.wit
docs/: references.md  spec.md
examples/: README.md
examples/cli-signaling/: Cargo.toml
examples/cli-signaling/src/: lib.rs
examples/cli-signaling/wit/: webrtc-echo-demo.wit  world.wit
examples/echo-demo/: Cargo.toml
examples/echo-demo/src/: lib.rs
examples/echo-demo/wit/: webrtc-echo-demo.wit
examples/wasip3-cli/: Cargo.toml
examples/wasip3-cli/src/: lib.rs
examples/wasmtime-demo/: Cargo.toml
examples/wasmtime-demo/src/: lib.rs  main.rs  manual.rs
examples/wasmtime-demo/tests/: cli_signaling.rs  manual_signaling.rs
examples/wasmtime-demo/tests/manual-signaling-guest/src/: lib.rs
examples/wasmtime-demo/tests/manual-signaling-guest/wit/: world.wit
examples/webrtc-consumer/: Cargo.toml
examples/webrtc-consumer/src/: lib.rs
examples/webrtc-consumer/wit/: world.wit
hosts/node/: package-lock.json  package.json  webrtc.js
hosts/node/generated-signaling/: signaling-demo.core.wasm  signaling-demo.d.ts  signaling-demo.js
hosts/node/generated-signaling/interfaces/: demo-webrtc-echo-rendezvous.d.ts  demo-webrtc-echo-signaling-demo.d.ts  wasi-webrtc-data-channels-data-channels.d.ts  wasi-webrtc-data-channels-signaling.d.ts  wasi-webrtc-data-channels-types.d.ts
hosts/node/signaling/: peer.mjs  rendezvous.js  run.mjs  webrtc-signaling.js
hosts/node/src/: run.mjs
hosts/node/test/: browser.mjs
hosts/wasmtime/: Cargo.toml
hosts/wasmtime/src/: lib.rs  main.rs  manual.rs  pipe.rs  webrtc.rs
hosts/wasmtime/tests/: manual_signaling.rs
hosts/wasmtime/tests/manual-signaling-guest/: Cargo.toml
hosts/wasmtime/tests/manual-signaling-guest/src/: lib.rs
jco-impl/: README.md  package-lock.json  package.json  webrtc.js
jco-impl/test/: browser.mjs
scripts/: build-shadow.sh  download-shadow.sh  setup.sh
signaling-server/: selftest.mjs  server.mjs
wasip3-impl/: Cargo.toml  README.md
wasip3-impl/src/: guest.rs  lib.rs  native.rs  peer.rs  provider.rs  runtime.rs
wasip3-impl/tests/: interop.rs
wasip3-impl/wit/: world.wit
wasmtime-impl/: Cargo.toml  README.md
wasmtime-impl/src/: bindings.rs  data_channel.rs  error.rs  host.rs  lib.rs  peer_connection.rs  pipe.rs
wasmtime-impl/tests/: manual_host.rs  manual_signaling.rs
wasmtime-impl/tests/manual-signaling-guest/src/: lib.rs
wasmtime-impl/tests/manual-signaling-guest/wit/: world.wit
wasmtime-impl/wit/: world.wit
wit/: webrtc-echo-demo.wit  webrtc.wit  world.wit
