[workspace]
members = [
    "wasmtime-impl",
    "wasip3-impl",
    "examples/wasmtime-demo",
    "examples/echo-demo",
    "examples/cli-signaling",
    "examples/webrtc-consumer",
    "conformance/runner",
    "conformance/signaling/server",
    "conformance/guest",
    "conformance/adapters/common",
    "conformance/adapters/wasmtime",
    "conformance/adapters/wasip3",
    "conformance/adapters/wasip3/mailbox",
    "conformance/adapters/wasip3/driver",
]
resolver = "2"

# Pin the sans-I/O WebRTC stack once, here, so every member (and any future wasm
# build) resolves the same source.
[workspace.dependencies]
rtc = "0.20.0-rc.3"

# Redirect every `rtc` resolution — the direct dependency of `wasip3-impl` and,
# crucially, the *transitive* dependency of the async `webrtc` 0.20 crate the
# Wasmtime host is built on — to upstream `rtc` master. The pinned commit
# includes the empty-message receive fix (webrtc-rs/rtc#131, merged upstream)
# that is not yet in any published release, so the hosts can receive
# zero-length messages. Using `[patch]` rather than a direct git dependency is
# what lets the fix reach `webrtc`'s own copy of `rtc`. Drop the patch and
# return to a plain crates.io version once a release including the fix ships.
[patch.crates-io]
rtc = { git = "https://github.com/webrtc-rs/rtc.git", rev = "28167db55b2e1373d3ac41e2af3851f654bb4c67" }
