[workspace]
members = [
    "wasmtime-impl",
    "wasip3-impl",
    "examples/wasmtime-demo",
    "examples/echo-demo",
    "examples/cli-signaling",
    "examples/webrtc-consumer",
    "conformance/runner",
    "conformance/signaling/server",
    "conformance/guest",
    "conformance/adapters/common",
    "conformance/adapters/wasmtime",
    "conformance/adapters/wasip3",
    "conformance/adapters/wasip3/mailbox",
    "conformance/adapters/wasip3/driver",
]
resolver = "2"

# Pin the sans-I/O WebRTC stack once, here, so every member (and any future wasm
# build) resolves the same source. 0.20.0-rc.4 is the first published release
# carrying the empty-message receive fix (webrtc-rs/rtc#131), so the hosts can
# receive zero-length messages.
[workspace.dependencies]
rtc = "0.20.0-rc.4"
