[package]
name = "wasip3-webrtc-datachannels"
version = "0.1.0"
edition = "2021"
publish = false
description = "A wasm component that runs the sans-I/O `rtc` WebRTC stack in-guest over WASIp3 `wasi:sockets`, exporting the `lann:webrtc-datachannels` `connections` resources so it can be composed (`wac plug`) with consumer components."

[lib]
# A component: the sans-I/O WebRTC stack runs in-guest and the `connections`
# resources are exported for composition. Built for `wasm32-wasip2`.
crate-type = ["cdylib"]

[dependencies]
# The sans-I/O WebRTC stack. Pinned, via the workspace, to `rtc` 0.20 so it
# compiles for `wasm32-wasip2`.
rtc.workspace = true
anyhow = "1"
bytes = "1"
# The async component-model bindings generator, driving the exported async
# `connections` methods and the imported `wasi:sockets`/`wasi:clocks` calls.
wit-bindgen = { version = "0.57", features = ["async", "async-spawn", "inter-task-wakeup"] }
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
