[package]
name = "wasmtime-webrtc-datachannels"
version = "0.1.0"
edition = "2021"
publish = false
description = "Wasmtime host implementation of the lann:webrtc-datachannels interfaces, backed by webrtc-rs."

[dependencies]
# Wasmtime with component-model async (streams/futures) support. The
# `component-model-async` feature gates the host `StreamReader`/`StreamProducer`
# API used here.
wasmtime = { version = "46", features = ["component-model", "component-model-async", "async", "runtime"] }
# `webrtc-rs`: a pure-Rust WebRTC stack. Provides the RTCPeerConnection /
# RTCDataChannel implementation that backs the host's data channels.
webrtc = "0.17"
futures = "0.3"
anyhow = "1"
bytes = "1"
# `webrtc-rs` peer connections require a Tokio runtime; the host spawns their
# async `close()` from `Drop` to tear down ICE/DTLS/SCTP background tasks, spawns
# the peer-connection build/channel-wiring tasks, and uses `sync`/`time` for the
# `wait-connected` connection-state signalling and its timeout.
tokio = { version = "1", features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wit-component = "0.247"
