[package]
name = "wasmtime-webrtc-datachannels"
version = "0.1.0"
edition = "2021"
publish = false
description = "Wasmtime host implementation of the lann:webrtc-datachannels interfaces, backed by webrtc-rs."

[dependencies]
# Wasmtime with component-model async (streams/futures) support. The
# `component-model-async` feature gates the host `StreamReader`/`StreamProducer`
# API used here.
wasmtime = { version = "46", features = ["component-model", "component-model-async", "async", "runtime"] }
# `webrtc-rs`: a pure-Rust WebRTC stack. Provides the RTCPeerConnection /
# RTCDataChannel implementation that backs the host's data channels.
webrtc = "0.20.0-rc.3"
futures = "0.3"
anyhow = "1"
bytes = "1"
# The `webrtc` 0.20 `PeerConnectionEventHandler` trait is defined with
# `#[async_trait]`, so implementing it requires the same attribute macro.
async-trait = "0.1"
# `webrtc-rs` peer connections require a Tokio runtime; the host spawns their
# async `close()` from `Drop` to tear down ICE/DTLS/SCTP background tasks, spawns
# the peer-connection build/channel-wiring tasks, and uses `sync`/`time` for the
# `wait-connected` connection-state signalling and its timeout.
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
# The demo-only `manual-signaling` host implementation lives in the demo crate;
# the manual-signaling integration test reuses it (a dev-dependency cycle,
# which Cargo permits) rather than keeping a duplicate copy under tests/.
wasmtime-webrtc-host = { path = "../examples/wasmtime-demo" }
wit-component = "0.247"
