[package]
name = "conformance-guest"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared conformance guest component: exports conformance:suite/runner and drives lann:webrtc-datachannels/connections through the conformance:signaling/mailbox, one wasm binary run against every target."

[lib]
crate-type = ["cdylib"]

[dependencies]
# The conformance world's bindings (imports `connections` + `mailbox`, exports
# the async `runner`): `async` pulls in the component-model stream/future
# runtime, `async-spawn` provides `wit_bindgen::spawn`.
wit-bindgen = { version = "0.59", features = ["async", "async-spawn"] }
# Concurrent send/receive within a single cooperative task (no OS threads).
futures = { version = "0.3", default-features = false, features = ["async-await"] }
# The opaque signaling blob encoding the guest owns (JSON session-description /
# ice-candidate values with an explicit end-of-candidates marker).
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
