[package]
name = "conformance-runner"
version = "0.1.0"
edition = "2021"
publish = false
description = "Conformance suite runner: reads the test registry and per-target manifests, aggregates adapter results, applies expected-fail policy, and renders the conformance matrix."

[[bin]]
name = "conformance-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
