[package]
name = "wasip3-cli"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# The sans-I/O peer core plus its `wasi:sockets`/timer guest driver (`GuestPeer`).
# `default-features = false` drops the Tokio-based native driver, which does not
# build for `wasm32-wasip2`; `guest` pulls in the driver this component runs.
wasip3-webrtc-datachannels = { path = "../../wasip3-impl", default-features = false, features = ["guest"] }
# `wasip3` provides the async `wasi:cli/run` export plus the `wasi:cli@0.3`
# stdio used to report progress. The `wasi:sockets`/`wasi:clocks` imports the
# driver needs come from the same `wasi:cli/command` world.
wasip3 = { version = "0.7", features = ["async-spawn"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
anyhow = "1"
