[package]
name = "wasmtime-webrtc-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# The `lann:webrtc-datachannels` host implementation (data channels
# and the stream/pipe plumbing) lives in this crate. Both binaries obtain their
# `types`/`data-channels` imports from its `add_to_linker`.
wasmtime-webrtc-datachannels = { path = "../../wasmtime-impl" }
# Wasmtime with component-model async (streams/futures) support. The
# `component-model-async` feature gates the `Config::wasm_component_model_async*`
# switches and the host `StreamReader`/`StreamProducer` API used here.
wasmtime = { version = "47", features = ["component-model", "component-model-async", "async", "cranelift", "runtime"] }
wasmtime-wasi = { version = "47", features = ["p3"] }
# `webrtc-rs` backs the demo-only `manual-signaling` host implementation (the
# `ManualPeer` in `src/manual.rs`), which lives here rather than in the shared
# crate.
webrtc = "0.20.0-rc.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
anyhow = "1"
env_logger = "0.11.11"
