[package]
name = "wasmtime-webrtc-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Wasmtime with component-model async (streams/futures) support. The
# `component-model-async` feature gates the `Config::wasm_component_model_async*`
# switches and the host `StreamReader`/`StreamProducer` API used here.
wasmtime = { version = "46", features = ["component-model", "component-model-async", "async", "cranelift", "runtime"] }
wasmtime-wasi = { version = "46", features = ["p3"] }
# `webrtc-rs`: a pure-Rust WebRTC stack. Provides the RTCPeerConnection /
# RTCDataChannel implementation that backs the host's echo endpoint.
webrtc = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
anyhow = "1"
bytes = "1"
env_logger = "0.11.11"
