[package]
name = "conformance-adapter-common"
version = "0.1.0"
edition = "2021"
publish = false
description = "Target-independent building blocks shared by the native conformance adapters and orchestrators: the test registry and orchestration plans, the peer-subprocess invocation and result-line parsing, the single-attempt test runner with its hang guard, the bounded-concurrency corpus runner, and the adapter result document."

[lib]
name = "conformance_adapter_common"
path = "src/lib.rs"

# The Shadow-lab environment executor: generates a Shadow network-simulator
# config placing each two-peer test on its own simulated hosts, runs `shadow`
# once, and writes the `<target>-shadow.json` result document. Target-neutral:
# `--peer-kind` selects the per-role peer command (the native conformance-peer
# or the composed wasip3 component under `wasmtime run`). Unlike the netns lab it
# needs no root or network namespaces.
[[bin]]
name = "conformance-shadow"
path = "src/bin/shadow.rs"

# The netns-lab environment executor: provisions a scenario's network-namespace
# topology (netns/nftables/coturn, owned by the crate's `lab` module), starts
# the signaling (and STUN/TURN) servers, runs the two-peer corpus with each peer
# placed in its own namespace (`ip netns exec`), and writes a per-scenario
# result document. Target-neutral like conformance-shadow (`--peer-kind`);
# unlike it, requires root.
[[bin]]
name = "conformance-netns"
path = "src/bin/netns.rs"

[dependencies]
# The suite-owned signaling server, started in-process so each adapter run owns
# its own mailbox without managing a subprocess.
conformance-signalingd = { path = "../../signaling/server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util"] }
futures = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CLI parsing for the conformance-shadow executor binary.
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
# Stderr subscriber for the adapter/executor binaries (`init_tracing`).
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
