[package]
name = "conformance-adapter-wasmtime"
version = "0.1.0"
edition = "2021"
publish = false
description = "Conformance adapter for the wasmtime (native webrtc-rs) target: runs the shared conformance guest against the wasmtime host, driving each test to a raw pass/fail/skip and emitting an adapter result document the conformance runner consumes."

[lib]
name = "conformance_adapter_wasmtime"
path = "src/lib.rs"

[[bin]]
name = "conformance-adapter-wasmtime"
path = "src/main.rs"

# Cross-runtime interop orchestrator: reuses the adapter library to drive one
# wasmtime peer of a pair while the other runtime drives the second peer.
[[bin]]
name = "conformance-interop"
path = "src/bin/interop.rs"

# A single wasmtime peer, launched as a process by the environment executors
# (the netns-lab `conformance-netns` and Shadow-lab `conformance-shadow` binaries in
# conformance-adapter-common) so the two peers of a test connect over a real
# (non-loopback) path.
[[bin]]
name = "conformance-peer"
path = "src/bin/peer.rs"

[dependencies]
# The shared adapter building blocks: outcomes, the peer-subprocess invocation,
# the retry loop, the corpus runner, and the result document.
conformance-adapter-common = { path = "../common" }
# The wasmtime host under test: satisfies the guest's `connections`/`types`
# imports with a real webrtc-rs data channel and peer connection.
wasmtime-webrtc-datachannels = { path = "../../../wasmtime-impl" }
# The suite-owned signaling server, started in-process so each run owns its own
# mailbox without managing a subprocess.
conformance-signalingd = { path = "../../signaling/server" }
# The wasip3-guest peer primitive (`Wasip3Peer`), used by the interop
# orchestrator to drive the wasip3 half of the wasmtime <-> wasip3-guest pair.
conformance-adapter-wasip3 = { path = "../wasip3" }
# Wasmtime with component-model async (the guest's `run-test` export and the
# host's stream/future plumbing use the async ABI).
wasmtime = { version = "47", features = ["component-model", "component-model-async", "async", "cranelift", "runtime"] }
# Native HTTP client backing the mailbox host (plain HTTP/1.1 long-poll against
# the in-process signaling server; no TLS needed for localhost).
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
futures = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
# The `rtc` (sans-I/O WebRTC) crate re-exports `MulticastDnsMode`, used to turn
# off multicast-DNS candidate gathering for the Shadow environment (whose
# simulated stack lacks the multicast-socket options mDNS needs).
rtc = { workspace = true }
